...
          parameter = 'PM10';
          label = 'PM10';
          unit = 'µg/m³';
          break;
        case 'PM25_12':
        case 'PM25M':
        case 'PM2.5':
        case 'PM25':
          parameter = 'PM25';
          label = 'PM2.5';
          unit = 'µg/m³';
          break;
        case 'O3M':
...
