...
  "pm2_5": "Partículas PM2.5",
  "no2": "Dióxido de Nitrógeno",
  "so2": "Dióxido de Azufre",
  "co": "Monóxido de Carbono",
  "o3": "Ozono",

  "pollutantDetail": "Detalle: {label}",
  "pollutantDetailTitle": "Detalle",
  "measurementMethod": "Método de medición",
  "shortTerm": "A corto plazo",
  "longTerm": "A largo plazo",
  "dataUnavailable": "Datos no disponibles",

...
